[package]
name = "kactus"
version = "0.1.0"
edition = "2021"
default = [ "stable" ]
repository = "https://github.com/CatenaryMaps/kactus-gtfs-rt"

[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = { version = "4.5.1", default-features = false, features =  ["macros", "compress-brotli", "compress-gzip", "cookies", "http2"] }
actix-web-actors = "4.3.0"
ahash = "0.8.9"
amtrak-gtfs-rt = {git = "https://github.com/CatenaryMaps/amtrak-gtfs-rt"}
anyhow = "1.0"
arguments = "0.7"
chrono = "0.4.34"
chrono-tz = "0.8.6"
color-eyre = "0.6.2"
csv = "1.3"
#etcd = "0.9.0"
futures = "0.3.30"
gtfs-rt = {git = "https://github.com/lolpro11/gtfs-rt"}
hyper = { version = "1.1.0", features = ["full"] }
lock_api = "0.4.2"
metrohash = "1.0"
prost = "0.12"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
protobuf-json-mapping = "3.2.0"
qstring = "0.7"
rand = "0.8"
rayon = "1.8.1"
redis = { version = "0.24", features = ["streams"] }
regex = "1.10.3"
reqwest = {version = "0.11", default-features = false, features = ["gzip","brotli","rustls-tls","deflate"]}
serde = "1.0.196"
serde_derive = "1.0.192"
serde_json = "1.0.113"
snailquote = "0.3.1"
stoppable_thread = "0.2.1"
systemctl = "0.3.1"
termion = "3.0.0"
tarpc = { version = "0.33", features = ["tokio1", "serde-transport", "tcp", "serde-transport-json"] }
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "macros", "net"] }
gtfs-structures = { git = "https://github.com/lolpro11/gtfs-structure"}
tokio-zookeeper = "0.2.1"

[build]
target = "x86_64-unknown-linux-gnu"
rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static", "-C", "target-feature=-crt-static"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "ingestv2"
path = "src/ingestv2/main.rs"

[[bin]]
name = "ingestv4"
path = "src/ingestv4/main.rs"

[[bin]]
name = "tarpcserver"
path = "src/ingestv4/server.rs"


[[bin]]
name = "tarpcclient"
path = "src/ingestv4/client.rs"

[[bin]]
name = "ingestmetrolink"
path = "src/ingestv2/metrolink.rs"

[[bin]]
name = "ingest_mtarail"
path = "src/conversions/nyc_rail.rs"

[[bin]]
name = "ingestdoublemap"
path = "src/conversions/doublemap/main.rs"

[[bin]]
name = "meerkat-fallback"
path = "src/meerkat-manager/meerkat-fallback.rs"

[[bin]]
name = "ingestamtrak"
path = "src/conversions/amtrak/amtrak.rs"

[[bin]]
name = "ingestv3"
path = "src/ingestv3/ingest.rs"
