[package]
name = "kactus"
version = "0.1.0"
edition = "2021"
default = [ "stable" ]
repository = "https://github.com/CatenaryMaps/kactus-gtfs-rt"

[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4.8", default-features = false, features =  ["macros", "compress-brotli", "compress-gzip", "cookies", "http2"] }
actix-web-actors = "4.3"
ahash = "0.8.11"
amtrak-gtfs-rt = "*"
anyhow = "1.0"
arguments = "0.7"
chrono = "0.4.38"
chrono-tz = "0.10.0"
color-eyre = "0.6.3"
csv = "1.3"
#etcd = "0.9.0"
futures = "0.3.30"
gtfs-rt = { git = "https://github.com/lolpro11/gtfs-rt" }
hyper = { version = "1.5.0", features = ["full"] }
lock_api = "0.4.12"
metrohash = "1.0"
prost = "0.11"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
protobuf-json-mapping = "3.5.0"
qstring = "0.7"
rand = "0.8"
rayon = "1.10.0"
redis = { version = "0.27.3", features = ["streams"] }
regex = "1.11"
reqwest = {version = "0.12", default-features = false, features = ["gzip","brotli","rustls-tls","deflate"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
snailquote = "0.3.1"
stoppable_thread = "0.2.1"
systemctl = "0.4.0"
termion = "4.0.2"
tarpc = { version = "0.33", features = ["tokio1", "serde-transport", "tcp", "serde-transport-json"] }
tokio = { version = "1.39", features = ["full", "rt-multi-thread", "macros", "net"] }
gtfs-structures = "*"
tokio-zookeeper = "0.4.0"

[build]
target = "x86_64-unknown-linux-gnu"
rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static", "-C", "target-feature=-crt-static"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "ingestv2"
path = "src/ingestv2/main.rs"

[[bin]]
name = "store"
path = "src/ingestv2/store.rs"

[[bin]]
name = "ingestv4"
path = "src/ingestv4/main.rs"

[[bin]]
name = "tarpcserver"
path = "src/ingestv4/server.rs"

[[bin]]
name = "tarpcclient"
path = "src/ingestv4/client.rs"

[[bin]]
name = "ingestmetrolink"
path = "src/ingestv2/metrolink.rs"

[[bin]]
name = "ingest_mtarail"
path = "src/conversions/nyc_rail.rs"

[[bin]]
name = "ingestdoublemap"
path = "src/conversions/doublemap/main.rs"

[[bin]]
name = "meerkat-fallback"
path = "src/meerkat-manager/meerkat-fallback.rs"

[[bin]]
name = "ingestamtrak"
path = "src/conversions/amtrak/amtrak.rs"

[[bin]]
name = "ingestv3"
path = "src/ingestv3/ingest.rs"
